--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,15 @@
-{ "presets": ["es2015"] }
+{
+    "env": {
+        "development": {
+            "presets": ["react-hmre"]
+        },
+        "production": {
+            "plugins": [
+                "transform-react-remove-prop-types",
+                "transform-react-constant-elements",
+                "transform-react-inline-elements"
+            ]
+        }
+    },
+    "presets": ["es2015", "react"]
+}
