--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,221 @@
 {
-    "extends": "airbnb/base",
     "env": {
-        "browser": true,
-        "node": true,
+        "es6": true
+    },
+    "globals": {
+        "window": true,
         "mocha": true
     },
     "ecmaFeatures": {
-        "forOf": true,
-        "es6": true
+        "jsx": true,
+        "modules": true
     },
+    "plugins": [
+        "react"
+    ],
     "rules": {
-        "comma-dangle": 0,
-        "indent": [ 0, 4, { "SwitchCase": 1 } ]
+        // Possible Errors
+        "comma-dangle": [ 2, "never" ],
+        "no-cond-assign": [ 2, "always" ],
+        "no-console": [ 2 ],
+        "no-constant-condition": [ 2 ],
+        "no-control-regex": [ 2 ],
+        "no-debugger": [ 2 ],
+        "no-dupe-args": [ 2 ],
+        "no-dupe-keys": [ 2 ],
+        "no-duplicate-case": [ 2 ],
+        "no-empty-character-class": [ 2 ],
+        "no-empty": [ 2 ],
+        "no-ex-assign": [ 2 ],
+        "no-extra-boolean-cast": [ 2 ],
+        "no-extra-parens": [ 0 ], // TODO
+        "no-extra-semi": [ 2 ],
+        "no-func-assign": [ 2 ],
+        "no-inner-declarations": [ 2 ],
+        "no-invalid-regexp": [ 2 ],
+        "no-irregular-whitespace": [ 2 ],
+        "no-negated-in-lhs": [ 2 ],
+        "no-obj-calls": [ 2 ],
+        "no-regex-spaces": [ 2 ],
+        "no-sparse-arrays": [ 2 ],
+        "no-unreachable": [ 2 ],
+        "use-isnan": [ 2 ],
+        "valid-jsdoc": [ 0 ], // TODO
+        "valid-typeof": [ 2 ],
+        "no-unexpected-multiline": [ 2 ],
+
+        // Best Practices
+        "accessor-pairs": [ 2 ],
+        "block-scoped-var": [ 2 ],
+        "complexity": [ 0, 2 ], // TODO
+        "consistent-return": [ 2 ],
+        "curly": [ 2 ],
+        "default-case": [ 2 ],
+        "dot-notation": [ 2 ],
+        "dot-location": [ 2, "property" ],
+        "eqeqeq": [ 2 ],
+        "guard-for-in": [ 2 ],
+        "no-alert": [ 2 ],
+        "no-caller": [ 2 ],
+        "no-div-regex": [ 2 ],
+        "no-else-return": [ 2 ],
+        "no-empty-label": [ 2 ],
+        "no-empty-pattern": [ 2 ],
+        "no-eq-null": [ 2 ],
+        "no-eval": [ 2 ],
+        "no-extend-native": [ 2 ],
+        "no-extra-bind": [ 2 ],
+        "no-fallthrough": [ 2 ],
+        "no-floating-decimal": [ 2 ],
+        "no-implicit-coercion": [ 2 ],
+        "no-implied-eval": [ 2 ],
+        "no-invalid-this": [ 0 ], // TODO
+        "no-iterator": [ 2 ],
+        "no-labels": [ 2 ],
+        "no-lone-blocks": [ 2 ],
+        "no-loop-func": [ 2 ],
+        "no-magic-numbers": [ 0 ], // TODO
+        "no-multi-spaces": [ 2 ],
+        "no-multi-str": [ 2 ],
+        "no-native-reassign": [ 2 ],
+        "no-new-func": [ 2 ],
+        "no-new-wrappers": [ 2 ],
+        "no-new": [ 2 ],
+        "no-octal-escape": [ 2 ],
+        "no-octal": [ 2 ],
+        "no-param-reassign": [ 2 ],
+        "no-process-env": [ 2 ],
+        "no-proto": [ 2 ],
+        "no-redeclare": [ 2 ],
+        "no-return-assign": [ 2 ],
+        "no-script-url": [ 2 ],
+        "no-self-compare": [ 2 ],
+        "no-sequences": [ 2 ],
+        "no-throw-literal": [ 2 ],
+        "no-unused-expressions": [ 2 ],
+        "no-useless-call": [ 2 ],
+        "no-useless-concat": [ 2 ],
+        "no-void": [ 2 ],
+        "no-warning-comments": [ 0 ], // TODO
+        "no-with": [ 2 ],
+        "radix": [ 2 ],
+        "vars-on-top": [ 0 ], // TODO
+        "wrap-iife": [ 2 ],
+        "yoda": [ 2 ],
+
+        // Variables
+        "init-declarations": [ 2 ],
+        "no-catch-shadow": [ 2 ],
+        "no-delete-var": [ 2 ],
+        "no-label-var": [ 2 ],
+        "no-shadow-restricted-names": [ 2 ],
+        "no-shadow": [ 2 ],
+        "no-undef-init": [ 2 ],
+        "no-undef": [ 2 ],
+        "no-undefined": [ 2 ],
+        "no-unused-vars": [ 2 ],
+        "no-use-before-define": [ 2 ],
+
+        // Stylistic Issues
+        "array-bracket-spacing": [ 2, "always" ],
+        "block-spacing": [ 2, "always" ],
+        "brace-style": [ 2, "stroustrup", { "allowSingleLine": false } ],
+        "camelcase": [ 2, {"properties": "always"} ],
+        "comma-spacing": [ 2, { "before": false, "after": true } ],
+        "comma-style": [ 2, "last" ],
+        "computed-property-spacing": [ 2, "never" ],
+        "consistent-this": [ 2, "self" ],
+        "eol-last": [ 2 ],
+        "func-names": [ 0 ], // TODO
+        "func-style": [ 2, "expression" ],
+        "id-length": [ 0, { "min": 1, "max": 10, "exceptions": [] } ],
+        "indent": [ 0, 4, { "SwitchCase": 1 } ], // TODO
+        "key-spacing": [ 2, { "beforeColon": false, "afterColon": true }],
+        "lines-around-comment": [ 2, { "beforeBlockComment": true } ],
+        "linebreak-style": [ 2 ],
+        "max-nested-callbacks": [ 0, 2 ], // TODO
+        "new-cap": [ 2 ],
+        "new-parens": [ 2 ],
+        "newline-after-var": [ 2, "always" ],
+        "no-array-constructor": [ 2 ],
+        "no-continue": [ 2 ],
+        "no-inline-comments": [ 0 ],
+        "no-lonely-if": [ 2 ],
+        "no-mixed-spaces-and-tabs": [ 2 ],
+        "no-multiple-empty-lines": [ 2, { "max": 1 } ],
+        "no-nested-ternary": [ 2 ],
+        "no-new-object": [ 2 ],
+        "no-spaced-func": [ 0 ],
+        "no-ternary": [ 0 ],
+        "no-trailing-spaces": [ 2 ],
+        "no-underscore-dangle": [ 0 ],
+        "no-unneeded-ternary": [ 2 ],
+        "object-curly-spacing": [ 2, "always" ],
+        "one-var": [ 2, "never" ],
+        "operator-assignment": [ 2, "always" ],
+        "operator-linebreak": [ 2, "before" ],
+        "padded-blocks": [ 0 ],
+        "quote-props": [ 2, "as-needed" ],
+        "quotes": [ 2, "single", "avoid-escape" ],
+        "id-match": [ 0 ], // TODO
+        "semi-spacing": [2, { "before": false, "after": true }],
+        "semi": [ 2, "always" ],
+        "sort-vars": [ 0 ],
+        "space-after-keywords": [ 2, "always" ],
+        "space-before-blocks": [ 2, "always" ],
+        "space-before-function-paren": [ 2, "always" ],
+        "space-in-parens": [ 2, "never" ],
+        "space-infix-ops": [ 2 ],
+        "space-return-throw-case": [ 2 ],
+        "space-unary-ops": [ 2, { "words": true, "nonwords": false } ],
+        "spaced-comment": [ 0 ],
+        "wrap-regex": [ 2 ],
+
+        // ECMAScript 6
+        "arrow-parens": [ 2, "as-needed" ],
+        "arrow-spacing": [ 2, { "before": true, "after": true } ],
+        "constructor-super": [ 2 ],
+        "generator-star-spacing": [ 2, {"before": true, "after": true} ],
+        "no-class-assign": [ 2 ],
+        "no-const-assign": [ 2 ],
+        "no-dupe-class-members": [ 2 ],
+        "no-this-before-super": [ 2 ],
+        "no-var": [ 0 ], // TODO
+        "object-shorthand": [ 0 ], // TODO
+        "prefer-arrow-callback": [ 2 ],
+        "prefer-const": [ 2 ],
+        "prefer-spread": [ 0 ],
+        "prefer-reflect": [ 0 ], // TODO
+        "prefer-template": [ 0 ], // TODO
+        "require-yield": [ 2 ],
+
+        // eslint-plugin-react
+        "react/display-name": 0,
+        "react/jsx-boolean-value": 0,
+        "react/jsx-closing-bracket-location": 0, // TODO
+        "react/jsx-curly-spacing": 0, // TODO: [ 2, "always" ],
+        "react/jsx-indent-props": 0, // TODO: [ 2, 4 ],
+        "react/jsx-max-props-per-line": 0, // TODO: [ 2, 1 ],
+        "react/jsx-no-duplicate-props": [ 2 ],
+        "react/jsx-no-literals": 0, // TODO: [ 2 ],
+        "react/jsx-no-undef": [ 2 ],
+        "react/jsx-quotes": 0, // TODO: jsx-quotes
+        "react/jsx-sort-prop-types": 0,
+        "react/jsx-sort-props": 0,
+        "react/jsx-uses-react": 1,
+        "react/jsx-uses-vars": 1,
+        "react/no-danger": 0,
+        "react/no-did-mount-set-state": [ 2 ],
+        "react/no-did-update-set-state": [ 2 ],
+        "react/no-direct-mutation-state": 0, // TODO: [ 2 ]
+        "react/no-multi-comp": [ 2 ],
+        "react/no-set-state": 0,
+        "react/no-unknown-property": [ 2 ],
+        "react/prop-types": 0, // TODO: [ 2 ],
+        "react/react-in-jsx-scope": 0,
+        "react/require-extension": [ 1, { "extensions": [ ".js" ] } ],
+        "react/self-closing-comp": [ 2 ],
+        "react/sort-comp": 0,
+        "react/wrap-multilines": 0 // TODO: [ 2 ]
     }
 }
