--- a/package.json
+++ b/package.json
@@ -6,22 +6,35 @@
   "scripts": {
     "lint": "eslint .",
     "test": "mocha --compilers js:babel-register",
-    "start": "cross-env NODE_ENV=development node server.js",
-    "build": "npm run test && cross-env NODE_ENV=production webpack --progress --colors"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --hot --inline",
+    "build": "cross-env NODE_ENV=production webpack --progress --colors"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/styryshkin/reactjs-boilerplate.git"
   },
   "homepage": "https://github.com/styryshkin/reactjs-boilerplate#readme",
+  "dependencies": {
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0"
+  },
   "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.2",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-react-constant-elements": "^6.5.0",
+    "babel-plugin-transform-react-inline-elements": "^6.5.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.2",
+    "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.0",
     "babel-register": "^6.4.3",
     "cross-env": "^1.0.7",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^5.0.0",
+    "eslint-plugin-react": "^3.16.1",
     "html-webpack-plugin": "^2.8.1",
     "mocha": "^2.4.5",
     "webpack": "^1.12.13",
